--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -193,7 +193,7 @@
                             android:gravity="center"
                             android:paddingBottom="@dimen/info_frag_right_pane_cnt_tv_padding_vertical"
                             android:paddingTop="@dimen/info_frag_right_pane_cnt_tv_padding_vertical"
-                            android:text="@string/info_frag_cnt_worker_on"
+                            android:text="@string/info_frag_cost"
                             android:textColor="@android:color/white"
                             android:textSize="36dp" />
 
