--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -4,6 +4,7 @@
     android:orientation="horizontal">
 
     <LinearLayout
+        android:id="@+id/menu_vg"
         android:layout_width="@dimen/info_frag_left_pane_width"
         android:layout_height="match_parent"
         android:background="@color/info_frag_left_pane_bg"
