--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -307,5 +307,7 @@
     <dimen name="info_frag_right_pane_list_refresh_margin_right">22dp</dimen>
     <dimen name="info_frag_right_pane_list_margin_top">39dp</dimen>
     <dimen name="info_frag_right_pane_list_height">270dp</dimen>
+    <dimen name="info_frag_list_view_title_height">30dp</dimen>
+    <dimen name="info_frag_list_view_content_height">46dp</dimen>
 
 </resources>
