[Login] set up shared preference for login, and store user id/token into WorkingData

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/login_password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:hint="密碼M"/>
+                android:hint="密碼"/>
         </android.support.design.widget.TextInputLayout>
         <Button
             android:id="@+id/login_button"
