--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -287,27 +287,12 @@
     <dimen name="current_task_items_margin_top">24dp</dimen>
     <dimen name="tasks_listview_margin_top">17dp</dimen>
 
-    <!-- InfoFragment -->
-    <dimen name="info_frag_left_pane_width">95dp</dimen>
-    <dimen name="info_frag_navi_menu_margin_top">14dp</dimen>
-    <dimen name="info_frag_navi_menu_tv_margin_top">38dp</dimen>
-    <dimen name="info_frag_right_pane_title_vg_height">80dp</dimen>
-    <dimen name="info_frag_right_pane_title_tv_margin_left">20dp</dimen>
-    <dimen name="info_frag_right_pane_noti_margin_right">15dp</dimen>
-    <dimen name="info_frag_right_pane_cnt_vg_height">250dp</dimen>
-    <dimen name="info_frag_right_pane_cnt_vg_padding">9dp</dimen>
-    <dimen name="info_frag_right_pane_cnt_sub_vg_height">150dp</dimen>
-    <dimen name="info_frag_right_pane_cnt_sub_vg_horizontal_margin">21dp</dimen>
-    <dimen name="info_frag_right_pane_cnt_tv_padding_vertical">16dp</dimen>
-    <dimen name="info_frag_right_pane_list_margin_left">74dp</dimen>
-    <dimen name="info_frag_right_pane_list_vg_padding_left">70dp</dimen>
-    <dimen name="info_frag_right_pane_list_vg_padding_right">103dp</dimen>
-    <dimen name="info_frag_right_pane_list_title_height">60dp</dimen>
-    <dimen name="info_frag_right_pane_list_title_margin_left">25dp</dimen>
-    <dimen name="info_frag_right_pane_list_refresh_margin_right">22dp</dimen>
-    <dimen name="info_frag_right_pane_list_margin_top">39dp</dimen>
-    <dimen name="info_frag_right_pane_list_height">270dp</dimen>
-    <dimen name="info_frag_list_view_title_height">30dp</dimen>
-    <dimen name="info_frag_list_view_content_height">46dp</dimen>
+    <!-- Main information -->
+    <dimen name="main_information_padding">20dp</dimen>
+    <dimen name="main_information_board_text_size">25dp</dimen>
+    <dimen name="main_information_divider_size">20dp</dimen>
+    <dimen name="main_information_board_title_padding">5dp</dimen>
+    <dimen name="main_information_board_content_padding">8dp</dimen>
+    <dimen name="main_information_list_title_height">50dp</dimen>
 
 </resources>
