--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -28,8 +28,10 @@
     <integer name="detailed_worker_task_schedule_error_weight">58</integer>
     <integer name="detailed_worker_task_schedule_warnings_weight">228</integer>
 
-    <!-- InfoFragment -->
-    <integer name="info_frag_list_left_weight">660</integer>
-    <integer name="info_frag_list_right_weight">412</integer>
+    <!-- Main information -->
+    <integer name="main_information_list_group_top_weight">4</integer>
+    <integer name="main_information_list_group_bottom_weight">3</integer>
+    <integer name="main_information_list_group_left_weight">3</integer>
+    <integer name="main_information_list_group_right_weight">2</integer>
 
 </resources>
