--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,12 +7,25 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.bananaplan.workflowandroid.main.LoginActivity">
+    tools:context="com.bananaplan.workflowandroid.main.LoginActivity"
+    android:background="@color/blue1">
 
     <LinearLayout
+        android:id="@+id/login_container"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:background="@color/button_white_text_color"
+        android:padding="10dp"
         android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textSize="24dp"
+            android:text="nicloud 雲工廠"
+            android:gravity="center"
+            android:textColor="@color/blue1"/>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -20,6 +33,7 @@
                 android:id="@+id/login_account_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:inputType="textEmailAddress"
                 android:hint="帳號"/>
         </android.support.design.widget.TextInputLayout>
 
@@ -30,6 +44,7 @@
                 android:id="@+id/login_password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:inputType="textPassword"
                 android:hint="密碼"/>
         </android.support.design.widget.TextInputLayout>
         <Button
