[Logout][Menu] add logout button, refactor menu

--- a/app/src/main/res/layout/fragment_drawer_menu.xml
+++ b/app/src/main/res/layout/fragment_drawer_menu.xml
@@ -8,4 +8,9 @@
         android:layout_height="match_parent"
         android:background="@color/drawer_background_color"/>
 
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="登出"/>
 </RelativeLayout>
