--- a/app/src/main/res/layout/main_information_list_review_item.xml
+++ b/app/src/main/res/layout/main_information_list_review_item.xml
@@ -5,13 +5,6 @@
     android:orientation="horizontal"
     android:gravity="center_vertical">
 
-    <TextView
-        android:id="@+id/main_information_list_title_delay_time"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"/>
-
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -39,23 +32,24 @@
         android:layout_weight="1"
         android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/main_information_list_title_next_notify_time"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center"/>
-
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:orientation="horizontal"
         android:gravity="center">
 
         <TextView
-            android:id="@+id/main_information_list_title_add_notify_time_button"
-            style="@style/ButtonStyle.Gray"/>
+            android:id="@+id/main_information_pass_button"
+            style="@style/ButtonStyle.Green"
+            android:text="通過" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/main_information_unpass_button"
+            style="@style/ButtonStyle.Gray"
+            android:layout_marginLeft="10dp"
+            android:text="不通過" />
+
+    </LinearLayout>
 
 </LinearLayout>
