--- a/app/src/main/res/layout/main_information_list_warning_content.xml
+++ b/app/src/main/res/layout/main_information_list_warning_content.xml
@@ -25,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:gravity="left|center_vertical"
+        android:gravity="center"
         android:orientation="vertical">
         <TextView
             android:id="@+id/case_name"
