--- a/app/src/main/res/drawable/task_card_background.xml
+++ b/app/src/main/res/drawable/task_card_background.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
+    <corners android:radius="@dimen/task_card_radius" />
     <solid android:color="@color/task_card_background_color" />
     <stroke android:width="1dp" android:color="@color/task_card_background_stroke_color" />
 
