--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,14 +38,20 @@
     <dimen name="task_case_information_participated_worker_avatar_text_size">16dp</dimen>
     <dimen name="task_case_edit_button_padding">15dp</dimen>
     <dimen name="task_case_edit_button_text_size">20dp</dimen>
-    <dimen name="task_card_part1_height">70dp</dimen>
-    <dimen name="task_card_part2_height">140dp</dimen>
-    <dimen name="task_card_normal_margin">5dp</dimen>
-    <dimen name="task_card_boundary_margin">23dp</dimen>
-    <dimen name="task_card_padding">10dp</dimen>
+    <dimen name="task_card_radius">5dp</dimen>
+    <dimen name="task_card_height">70dp</dimen>
+    <dimen name="task_card_normal_margin">7dp</dimen>
+    <dimen name="task_card_boundary_margin">14dp</dimen>
+    <dimen name="task_card_drawable_padding">5dp</dimen>
+    <dimen name="task_card_middle_part_padding_left_right">5dp</dimen>
+    <dimen name="task_card_index_text_size">20dp</dimen>
     <dimen name="task_card_title_text_size">18dp</dimen>
-    <dimen name="task_card_content_text_size">13dp</dimen>
+    <dimen name="task_card_content_text_size">14dp</dimen>
+    <dimen name="task_card_wip_task_working_time_text_size">25dp</dimen>
     <dimen name="task_card_icon_text_margin_left">10dp</dimen>
+    <dimen name="task_card_status_corner_radius">5dp</dimen>
+    <dimen name="task_card_status_padding_top_bottom">2dp</dimen>
+    <dimen name="task_card_status_padding_left_right">10dp</dimen>
     <dimen name="task_item_warning_corner_radius">8dp</dimen>
     <dimen name="task_item_warning_padding_top_bottom">2dp</dimen>
     <dimen name="task_item_warning_padding_left_right">10dp</dimen>
