[Employee][Score] can score employee

--- a/app/src/main/res/layout/fragment_worker_ov_status.xml
+++ b/app/src/main/res/layout/fragment_worker_ov_status.xml
@@ -94,6 +94,7 @@
                     android:text="@string/worker_ov_btn_upload"/>
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/scorer_container"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
