--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -306,4 +306,17 @@
     <dimen name="main_information_list_content_small_text_size">12dp</dimen>
     <dimen name="main_information_list_delay_time_text_size">20dp</dimen>
 
+    <!-- Warning fragment -->
+    <dimen name="warning_frag_group_padding">10dp</dimen>
+    <dimen name="warning_frag_group_count_padding">5dp</dimen>
+    <dimen name="warning_frag_group_count_margin_left">10dp</dimen>
+    <dimen name="warning_frag_horizontal_padding">16dp</dimen>
+    <dimen name="warning_frag_vertical_padding">16dp</dimen>
+    <dimen name="warning_frag_warning_group_height">50dp</dimen>
+    <dimen name="warning_frag_warning_cards_margin_top">20dp</dimen>
+    <dimen name="warning_frag_warning_cards_horizontal_spacing">56dp</dimen>
+    <dimen name="warning_frag_warning_cards_vertical_spacing">42dp</dimen>
+    <dimen name="warning_frag_warning_card_padding">8dp</dimen>
+    <dimen name="warning_frag_warning_card_vertical_margin">8dp</dimen>
+
 </resources>
