--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -302,6 +302,7 @@
     <dimen name="main_information_list_header_height">50dp</dimen>
     <dimen name="main_information_list_header_padding">10dp</dimen>
     <dimen name="main_information_list_header_text_size">18dp</dimen>
+    <dimen name="main_information_list_item_min_height">36dp</dimen>
     <dimen name="main_information_list_title_text_size">12dp</dimen>
     <dimen name="main_information_list_content_small_text_size">12dp</dimen>
     <dimen name="main_information_list_delay_time_text_size">20dp</dimen>
