--- a/app/src/main/res/layout/fragment_main_info.xml
+++ b/app/src/main/res/layout/fragment_main_info.xml
@@ -120,15 +120,24 @@
 
             </LinearLayout>
 
-            <ListView
-                android:id="@+id/main_information_list_warning"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="@integer/main_information_list_group_right_weight"
                 android:layout_marginLeft="@dimen/main_information_divider_size"
-                android:background="@android:color/white"
-                android:divider="@color/gray3"
-                android:dividerHeight="@dimen/divider_height" />
+                android:background="@color/main_information_list_content_background_color"
+                android:orientation="vertical">
+
+                <include layout="@layout/main_information_list_warning_title" />
+
+                <ListView
+                    android:id="@+id/main_information_list_warning"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:divider="@color/gray3"
+                    android:dividerHeight="@dimen/divider_height" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
