[DrawerMenu] Hide useless part in drawer menu

--- a/app/src/main/res/layout/drawer_item_setting.xml
+++ b/app/src/main/res/layout/drawer_item_setting.xml
@@ -35,7 +35,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/setting"
-            android:background="?selectableItemBackgroundBorderless"/>
+            android:background="?selectableItemBackgroundBorderless"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
